fix: fix burqa on mobile size

--- a/src/index.css
+++ b/src/index.css
@@ -469,7 +469,7 @@ a:active {
   }
 
   .burqa img {
-    width: 360px;
+    width: 342px;
   }
   .abortions img {
   }
